Fix bug 494783 - Switching view range or editing events doesnt update view content and displayed events (regression). r=philipp